# advent

./: 2018.ipynb  2019.ipynb  2020.ipynb  2021.ipynb  Makefile  README.md  pyproject.toml
.ipynb_checkpoints/: 2018-checkpoint.ipynb
2024/: solutions.ipynb
2025/: solutions.py
